Fix cards' width on mobile

--- a/css/mobile-style.css
+++ b/css/mobile-style.css
@@ -43,7 +43,7 @@
 
     .card{
         height: auto !important;
-        width: 160px !important;
+        width: 40vw !important;
     }
 
     /* Select styles */
